Put stuff in container-fluids instead of containers. Everything resizes better now :)

--- a/staff/templates/staff/edit/room.html
+++ b/staff/templates/staff/edit/room.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -34,18 +35,19 @@
   <body>
     {% include "staff/header.html" %}
 
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Edit Room Information</h1>
-	<form method="POST" class="post-form">{% csrf_token %}
-	{{form.as_p}}
-	<button type="submit" class="save btn btn-default">Save</button>
-	</form>
-      </div>
-
-		
-    </div><!-- /.container -->
+    <div class="container-fluid">
+        <div class="starter-template">
+            <h1>Edit Room Information</h1>
+            <form method="POST" class="post-form">
+                {% csrf_token %}
+                
+                {{form.as_p}}
+                <button type="submit" class="save btn btn-default">
+                    Save
+                </button>
+            </form>
+        </div>
+    </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
