--- a/staff/templates/staff/home.html
+++ b/staff/templates/staff/home.html
@@ -34,7 +34,7 @@
   <body>
     {% include "staff/header.html" %}
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="starter-template">
           <h1>Welcome to the Lottery Staff Homepage</h1>
           <p class="lead">Select one of the options above to start</p>
@@ -69,7 +69,7 @@
                   </div>
           </div>
 
-    </div><!-- /.container -->
+    </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
