--- a/staff/templates/staff/select/room.html
+++ b/staff/templates/staff/select/room.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
@@ -41,7 +42,7 @@
   <body>
     {% include "staff/header.html" %}
       
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="starter-template">
         <h1>Welcome to Room Selection</h1>
@@ -92,7 +93,7 @@
           </div>
 
 
-    </div><!-- /.container -->
+    </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
