--- a/staff/templates/staff/select/select.html
+++ b/staff/templates/staff/select/select.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -35,7 +36,7 @@
   <body>
       {% include "staff/header.html" %}    
       
-      <div class="container">
+      <div class="container-fluid">
           <div class="starter-template">
               <h1>Selection</h1>
               <p class="lead">Place a student in a room, suite, or apartment.</p>
@@ -83,7 +84,7 @@
                   </div>
               </div>
           </div><!-- /.starter-template -->
-    </div><!-- /.container -->
+    </div><!-- /.container-fluid -->
       
     <!-- Bootstrap core JavaScript
     ================================================== -->
