--- a/staff/static/staff/home/starter-template.css
+++ b/staff/static/staff/home/starter-template.css
@@ -3,7 +3,9 @@ body {
 }
 
 .starter-template {
-  padding: 40px 15px;
+    padding-top: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .landing-panel-title {
