--- a/staff/templates/staff/ConfirmSelection.html
+++ b/staff/templates/staff/ConfirmSelection.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
@@ -39,52 +40,51 @@
   <body>
     {% include "staff/header.html" %}
       
-    <div class="container">
+    <div class="container-fluid">
+        <div class="starter-template">
+            <h1>Welcome to Room Selection</h1>
+            <p class="lead">
+                {{ HeaderText }}
+            </p>
+            <form method="POST" class="post-form" action="{{Action}}">
+                {% csrf_token %}
+                {% for field in form %}
+                <p> 
+                    {{field.label}} {{field}}
+                </p>
+                {% endfor %}	
+                <button onclick="window.history.back();" id="backButton" class="save btn btn-default">
+                    Back
+                </button>
+                <button type="submit" class="save btn btn-default">
+                    Confirm
+                </button>
+            </form>
+        </div>
+        
+        <div class="row bs-wizard" style="border-bottom:0;">
+            <div class="col-xs-4 bs-wizard-step complete"><!-- active -->
+              <div class="text-center bs-wizard-stepnum">Step 1</div>
+              <div class="progress"><div class="progress-bar"></div></div>
+              <a href="#" class="bs-wizard-dot"></a>
+              <div class="bs-wizard-info text-center">Building Information</div>
+            </div>
 
-      <div class="starter-template">
+            <div class="col-xs-4 bs-wizard-step complete">
+              <div class="text-center bs-wizard-stepnum">Step 2</div>
+              <div class="progress"><div class="progress-bar"></div></div>
+              <a href="#" class="bs-wizard-dot"></a>
+              <div class="bs-wizard-info text-center">Student information</div>
+            </div>
 
-
-	
-        <h1>Welcome to Room Selection</h1>
-	<p class="lead">{{ HeaderText }}</p>
-	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
-	{% for field in form %}
-		<p> {{field.label}} {{field}}</p>
-	{% endfor %}	
-	
-	</p>
-	<button onclick="window.history.back();" 
-		id="backButton" 
-		class="save btn btn-default" >Back</button>
-	<button type="submit" class="save btn btn-default">Confirm</button>
-	</form>
-      </div>
-
-          <div class="row bs-wizard" style="border-bottom:0;">
-                
-                <div class="col-xs-4 bs-wizard-step complete"><!-- active -->
-                  <div class="text-center bs-wizard-stepnum">Step 1</div>
-                  <div class="progress"><div class="progress-bar"></div></div>
-                  <a href="#" class="bs-wizard-dot"></a>
-                  <div class="bs-wizard-info text-center">Building Information</div>
-                </div>
-                
-                <div class="col-xs-4 bs-wizard-step complete">
-                  <div class="text-center bs-wizard-stepnum">Step 2</div>
-                  <div class="progress"><div class="progress-bar"></div></div>
-                  <a href="#" class="bs-wizard-dot"></a>
-                  <div class="bs-wizard-info text-center">Student information</div>
-                </div>
-                
-                <div class="col-xs-4 bs-wizard-step active">
-                  <div class="text-center bs-wizard-stepnum">Step 3</div>
-                  <div class="progress"><div class="progress-bar"></div></div>
-                  <a href="#" class="bs-wizard-dot"></a>
-                  <div class="bs-wizard-info text-center">Confirm</div>
-                </div>
-          </div>
-
-    </div><!-- /.container -->
+            <div class="col-xs-4 bs-wizard-step active">
+              <div class="text-center bs-wizard-stepnum">Step 3</div>
+              <div class="progress"><div class="progress-bar"></div></div>
+              <a href="#" class="bs-wizard-dot"></a>
+              <div class="bs-wizard-info text-center">Confirm</div>
+            </div>
+        </div>
+      </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
