--- a/staff/templates/staff/Login.html
+++ b/staff/templates/staff/Login.html
@@ -30,7 +30,7 @@
   <body>
       {% include "staff/header.html" %}
       
-      <div class="container">
+      <div class="container-fluid">
           <div class="starter-template">
             <h1>Login</h1>
               
