--- a/staff/templates/staff/edit/edit.html
+++ b/staff/templates/staff/edit/edit.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -33,79 +34,57 @@
 
   <body>
     {% include "staff/header.html" %}
+      
+    <div class="container-fluid">
+        <div class="starter-template">
+            <h1>Editing</h1>
+            <p class="lead">Edit a record for a previous placement or change details about a building or room.</p>
+            <hr class="yellow-line">
 
-    <div class="container">
+            <div class="row">
+                  <div class="col-md-6">
+                      <a href="{% url 'edit-room' %}" class="nodecor">
+                        <div class="landing-panel panel">
+                            <div class="landing-panel-heading">
+                                <h3 class="landing-panel-title">Edit a room</h3>
+                            </div>
+                            <div class="panel-body">
+                                Use this to make changes to the details of a room.<br><br>
+                                For example, Bundy 104 is listed as a double instead of a single.
+                            </div>
+                        </div>
+                      </a>
+                  </div>
 
-    <!--
-      <div class="starter-template">
-        <h1>Staff Admin Edit Options</h1>
-	<p class="lead">Select one of the options below</p>
-      </div>
-        
-    <div class="panel-group">
-    <div class="panel panel-warning">
-        <div class="panel-heading">Edit Room</div>
-        <div class="panel-body">Use this to make changes to the details of a room.</div>
-    </div>
-      <div class="panel panel-warning">
-        <div class="panel-heading">Edit Building</div>
-        <div class="panel-body">Use this to make changes to the details of a building.</div>
-      </div>
-      <div class="panel panel-warning">
-        <div class="panel-heading">Edit Selection</div>
-        <div class="panel-body">Use this to make changes to the demographics in a specific room.</div>
-      </div>
-    </div>
-    -->
-    <div class="starter-template">
-        <h1>Editing</h1>
-        <p class="lead">Edit a record for a previous placement or change details about a building or room.</p>
-        <hr class="yellow-line">
-        
-        <div class="row">
-              <div class="col-md-6">
-                  <a href="{% url 'edit-room' %}" class="nodecor">
-                    <div class="landing-panel panel">
-                        <div class="landing-panel-heading">
-                            <h3 class="landing-panel-title">Edit a room</h3>
+                  <div class="col-md-6">
+                      <a href="{% url 'edit-building' %}" class="nodecor">
+                        <div class="landing-panel panel panel-info">
+                            <div class="landing-panel-heading">
+                                <h3 class="landing-panel-title">Edit a building</h3>
+                            </div>
+                            <div class="panel-body">
+                                Use this to make changes to the details of a building.<br><br>
+                                For example, Saunders is now closed to women.
+                            </div>
                         </div>
-                        <div class="panel-body">
-                            Use this to make changes to the details of a room.<br><br>
-                            For example, Bundy 104 is listed as a double instead of a single.
+                      </a>
+                  </div>
+                  <div class="col-md-6">
+                      <a href="{% url 'review-room' %}" class="nodecor">
+                        <div class="landing-panel panel panel-info">
+                            <div class="landing-panel-heading">
+                                <h3 class="landing-panel-title">Edit a selection</h3>
+                            </div>
+                            <div class="panel-body">
+                                Use this to make changes to the demographics in a specific room.<br><br>
+                                For example, when placed, an occupant was marked as Class of 2018 instead of Class of 2019.
+                            </div>
                         </div>
-                    </div>
-                  </a>
-              </div>
-            
-              <div class="col-md-6">
-                  <a href="{% url 'edit-building' %}" class="nodecor">
-                    <div class="landing-panel panel panel-info">
-                        <div class="landing-panel-heading">
-                            <h3 class="landing-panel-title">Edit a building</h3>
-                        </div>
-                        <div class="panel-body">
-                            Use this to make changes to the details of a building.<br><br>
-                            For example, Saunders is now closed to women.
-                        </div>
-                    </div>
-                  </a>
-              </div>
-              <div class="col-md-6">
-                  <a href="{% url 'review-room' %}" class="nodecor">
-                    <div class="landing-panel panel panel-info">
-                        <div class="landing-panel-heading">
-                            <h3 class="landing-panel-title">Edit a selection</h3>
-                        </div>
-                        <div class="panel-body">
-                            Use this to make changes to the demographics in a specific room.<br><br>
-                            For example, when placed, an occupant was marked as Class of 2018 instead of Class of 2019.
-                        </div>
-                    </div>
-                  </a>
-              </div>
+                      </a>
+                  </div>
+            </div>
         </div>
-
-    </div><!-- /.container -->
+    </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
