--- a/staff/templates/staff/edit/transactionStudentInfo.html
+++ b/staff/templates/staff/edit/transactionStudentInfo.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
@@ -38,21 +39,23 @@
     {% include "staff/header.html" %}
    
       
-    <div class="container">
-
-      
-
-      <div class="starter-template">
-        <h1>Review Student Information</h1>
-	<p class="lead">{{ HeaderText }}</p>
-
-	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
-	{{form.as_p}}
-	<button type="submit" class="save btn btn-default">Save</button>
-	</form>
-      </div>
-
-          <div class="row bs-wizard" style="border-bottom:0;">
+    <div class="container-fluid">
+        <div class="starter-template">
+            <h1>Review Student Information</h1>
+            <p class="lead">
+                {{ HeaderText }}
+            </p>
+            
+            <form method="POST" class="post-form" action="{{Action}}">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button type="submit" class="save btn btn-default">
+                    Save
+                </button>
+            </form>
+        </div>
+        
+        <div class="row bs-wizard" style="border-bottom:0;">
                 
                 <div class="col-xs-4 bs-wizard-step complete"><!-- active -->
                   <div class="text-center bs-wizard-stepnum">Step 1</div>
@@ -76,7 +79,7 @@
                 </div>
           </div>
 
-    </div><!-- /.container -->
+    </div><!-- /.container-fluid -->
 
 
     <!-- Bootstrap core JavaScript
