--- a/staff/templates/staff/select/suiteStudentInfo.html
+++ b/staff/templates/staff/select/suiteStudentInfo.html
@@ -25,6 +25,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
+    <link href="/static/staff/home/header.css" rel="stylesheet">
 
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
@@ -42,7 +43,7 @@
 
   <body>
     {% include "staff/header.html" %}
-    <div class="container">
+    <div class="container-fluid">
       <div class="starter-template">
           <form role="form" method="POST" class="post-form form-horizontal" action="{{Action}}">
               
