--- a/students/static/students/home/home.css
+++ b/students/static/students/home/home.css
@@ -14,7 +14,7 @@
     color: black;
     border: none;
     background-color: lightgray;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .landing-panel-heading {
@@ -37,4 +37,8 @@
     /* apparently different browsers use different names */
     cursor: pointer; 
     cursor: hand;
+}
+
+.h4-panel {
+    margin-top: 0px;
 }
