--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -3,7 +3,7 @@
         
         <!-- Site Name -->
         <div class="navbar-header pull-left" style="padding-left: 5px;">
-            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar" style="float:left;">
+            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
