--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -39,11 +39,24 @@
           <div class="container-fluid">
               <div class="col-md-12" id="home-jumbotron">
                     <h1>
+                    {% if pageContent %}
                         {{pageContent.header_text}}
+                    {% else %}
+                        Let the search begin!
+                    {% endif %}
                     </h1>
                     <p class="lead">
+                    {% if pageContent %}
                         {{ pageContent.header_subtext|linebreaksbr }}
+                    {% else %}
+                        Select a building from the left sidebar to view room availability by building.
+                    {% endif %}
                     </p>
+                    {% if pageContent %}
+                        {% if pageContent.header_block_text %}
+                            {{ pageContent.header_block_text|linebreaks }}
+                        {% endif %}
+                    {% endif %}
                     <hr class="yellow-line">
               </div>
               
@@ -57,9 +70,17 @@
                     <div id="lottery-info-panel" class="panel-collapse collapse">
                         <div class="panel-body">
                             <h4 class="h4-panel">
+                            {% if pageContent %}
                                 {{ pageContent.lottery_name }}
+                            {% else %}
+                                General Lottery
+                            {% endif %}
                             </h4>
-                            {{ pageContent.lottery_text|linebreaksbr }} 
+                            {% if pageContent %}
+                                {{ pageContent.lottery_text|linebreaksbr }} 
+                            {% else %}
+                                The General Lottery provides students an opportunity to select all other housing options not chosen in the Blocking, Co-Op and Substance-Free lotteries or otherwise pre-assigned. You do not need to sign up for the General Lottery. For more information about the lottery visit the <a href="https://www.hamilton.edu/offices/residentiallife/lottery/general-lottery">Office of Residential Life website</a>.
+                            {% endif %}
                         </div>
                     </div>
                   </div>
@@ -74,7 +95,11 @@
                     <div id="contact-info-panel" class="panel-collapse collapse">
                         <div class="panel-body">
                             For questions or comments about the use of this website, please fill out our <a href="{% url 'contact' %}">contact form</a>.<br><br>
-                            {{ pageContent.contact|linebreaksbr }}
+                            {% if pageContent %}
+                                {{ pageContent.contact|linebreaksbr }}
+                            {% else %}
+                                Questions pertaining to the lottery and the lottery process should be directed to Ashley Place, assistant director of Residential Life, at <a href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a>.
+                            {% endif %}
                         </div>
                     </div>
                   </div>
