--- a/staff/templates/staff/StudentInfo.html
+++ b/staff/templates/staff/StudentInfo.html
@@ -28,6 +28,9 @@
 
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
+      
+    <!-- Cool Confirmation popups -->
+    <link href="/static/staff/jquery-confirm/dist/jquery-confirm.min.css" rel="stylesheet">  
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -52,7 +55,7 @@
                     
                   <div class="panel-heading">
                   <h1 class="panel-title">Input Student Information</h1>
-                    <ul class="nav nav-pills">
+                    <ul id="room-nav" class="nav nav-pills">
                         {% for room in Rooms %}
                             {% if forloop.counter0 == 0 %}
                             <li class="active">
@@ -93,6 +96,7 @@
                                         
                                 {% for student in form.studentFields %}
                                     <h3 class="PullField">Resident {{forloop.counter}}</h3>
+                                    <div class='Student'>
                                     {% for field in student %}
                                     
                     
@@ -109,6 +113,7 @@
                                     </div>
                                     </div>
                                 {% endfor %}
+                                    </div>
                                 {% endfor %}
                                             
                                 {% for field in form.hidden_fields %}
@@ -119,9 +124,8 @@
 
                             {% endfor %}
                                         
-                            <button onclick="window.history.back();" id="backButton" 
-	                           class="save btn btn-default" >Back</button>
-                            <button type="submit" class="save btn btn-default">Next</button>
+                            <button class="save btn btn-default back-btn" >Back</button>
+                            <button type="submit" class="save btn btn-default preview">Next</button>
                             </div>
                         </div>
                   </div>
@@ -174,9 +178,12 @@
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
 
     <!-- Our Scripts -->
+    <script src='/static/staff/jquery-confirm/dist/jquery-confirm.min.js'></script>
     <script src='/static/staff/jquery-toggles-master/toggles.min.js' type='text/javascript'></script>
     <script src="/static/staff/RoomSelect/togglePullForm.js"></script>
     <script src="/static/staff/RoomSelect/addFormControlToInputs.js"></script>
-    <script src="/static/staff/RoomSelect/BackButtons.js"></script>
+    <script src="/static/staff/RoomSelect/studentInfoConfirmText.js"></script>    
+    <script src="/static/staff/StaffForms/formPreview.js"></script>
+    <script src="/static/staff/backButtons/backButtons.js"></script>
     </body>
 </html>
